--- a/minimax.tex
+++ b/minimax.tex
@@ -508,7 +508,7 @@ We start with empty knowledge ($\pprofile = (\emptyset, \emptyset, …), W = \W$
 \begin{figure}
 	\centering
 	\includegraphics[width=.45\textwidth]{comparison.png}
-	\caption{Plot in support of \cref{tab:smallSize}}
+	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
 	\label{fig:smallSize}
 \end{figure}
 \begin{table}
